<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
	
    <View 
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        />
    
    <ScrollView 
        android:layout_weight="@integer/constant_frag_middle_view_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content" >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            
            <View 
            android:layout_width="match_parent"
            android:layout_height="@dimen/constant_actionbar_height"
            />
            
            <View
               android:layout_width="match_parent"
               android:layout_height="2dp"                
               />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_frag_About_Us_title"
                android:textSize="@dimen/constant_text_header"
                android:textStyle="bold"                
                />
            <View
               android:layout_width="match_parent"
               android:layout_height="2dp"                
               />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/constant_separator_bar"
                android:background="@color/horizontal_separator_light_blue"                
                />
            <View
               android:layout_width="match_parent"
               android:layout_height="10dp"                
               />
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_frag_About_Us_Blurb"
                />
            
            <View
                android:layout_width="match_parent"
                android:layout_height="25dp" />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/constant_text_header"
                android:textStyle="bold"
                android:text="@string/about_frag_Contact_title"                
                />
            <View
               android:layout_width="match_parent"
               android:layout_height="2dp"                
               />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/constant_separator_bar"
                android:background="@color/horizontal_separator_light_blue"                
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            
            <LinearLayout 
                android:id="@+id/about_frag_facebook_link_clickable_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true" >
                
                <ImageView 
                    android:src="@drawable/facebook_logo"
                    android:layout_width="@dimen/constant_social_media_icons"
                    android:layout_height="@dimen/constant_social_media_icons"
                    />
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/about_frag_facebook_link_display"
                    />
                                
            </LinearLayout>
            
            <View
               android:layout_width="match_parent"
               android:layout_height="5dp"                
               />
            
            <LinearLayout 
                android:id="@+id/about_frag_twitter_link_clickable_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true" >
                
                <ImageView 
                    android:src="@drawable/twitter_logo"
                    android:layout_width="@dimen/constant_social_media_icons"
                    android:layout_height="@dimen/constant_social_media_icons"
                    />
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/about_frag_twitter_link_display"
                    />
                
                
            </LinearLayout>
            
            <View
               android:layout_width="match_parent"
               android:layout_height="5dp"                
               />
            
            <LinearLayout 
                android:id="@+id/about_frag_googleplus_link_clickable_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true" >
                
                <ImageView 
                    android:src="@drawable/googleplus_logo"
                    android:layout_width="@dimen/constant_social_media_icons"
                    android:layout_height="@dimen/constant_social_media_icons"
                    />
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/about_frag_googleplus_link_display"
                    />
                
            </LinearLayout>
            
            <View
               android:layout_width="match_parent"
               android:layout_height="5dp"                
               />
            
            <LinearLayout 
                android:id="@+id/about_frag_email_link_clickable_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true" >
                
                <ImageView 
                    android:src="@drawable/email_logo"
                    android:layout_width="@dimen/constant_social_media_icons"
                    android:layout_height="@dimen/constant_social_media_icons"
                    />
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/about_frag_email_link_display"
                    />
                
            </LinearLayout>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="25dp" />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/constant_text_header"
                android:textStyle="bold"
                android:text="@string/about_frag_FeatureRequest_title"                
                />
            <View
               android:layout_width="match_parent"
               android:layout_height="2dp"                
               />
            
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/constant_separator_bar"
                android:background="@color/horizontal_separator_light_blue"                
                />
            <View
               android:layout_width="match_parent"
               android:layout_height="5dp"                
               />
                          
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_frag_Request_Blurb"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
             
             <Button 
                 android:id="@+id/about_frag_featurerequest_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/about_frag_featurerequest_button_text"
                 />
                       
            
            
        </LinearLayout>
        
    </ScrollView>
    
    
    <View 
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        />

</LinearLayout>
