<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <View 
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        />
    
    <ScrollView 
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            
            <View 
                android:layout_width="match_parent"
                android:layout_height="@dimen/constant_actionbar_height"
                />
            <View 
                android:layout_width="match_parent"
                android:layout_height="@dimen/constant_separator_bar"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/constant_separator_bar"
                android:background="@color/horizontal_separator_light_blue"                
                />
            <View 
                android:layout_width="match_parent"
                android:layout_height="@dimen/constant_separator_bar"
                />
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                
                <View 
                    android:layout_width="@dimen/constant_changelog_date_shortline_length"
                    android:layout_height="@dimen/constant_separator_bar"
                    android:layout_gravity="center_vertical"
                    android:background="@color/horizontal_separator_dark_gray"
                    />
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/changelog_date_0001"
                    />
                <View 
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/constant_separator_bar"
                    android:background="@color/horizontal_separator_dark_gray"
                    android:layout_gravity="center_vertical"
                    />
                
                
            </LinearLayout>
            
            <View 
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    />
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/changelog_versioning_info_0001"
                    />
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/changelog_changes_0001"                  
                    />
            
            
            
        </LinearLayout>
        
    </ScrollView>
    
    <View 
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        />

</LinearLayout>
